--- a/style.css
+++ b/style.css
@@ -1,71 +1,85 @@
-.container{
-    width: 100%;
-    max-width: 1170px;
-    margin: auto;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     padding: 0;
     margin: 0;
 }
-section#food-menu {
-    background: #b80818;
+.container{
+    margin: auto;
+    max-width: 1170px;
+    width: 100%;
+    padding-bottom: 20px;
 }
-.food-titile {
-    color: #000;
+body{
+    font-family:"poppins";
+    font-size: 9px;
 }
-.food-menu-heading {
-    text-align: center;
-    font-size: 3.4rem;
-    font-weight: 400;
-    color: #fff;
-  }
-  
-  .food-menu-container {
+span{
+    color:red;
+}
+.About_head_1{
+text-align: center;
+padding: 24px;
+FONT-SIZE: 20px;
+}
+section.first{
+    background-image: url("img/background.jpg");
+}
+.box{
+    border: 2px solid white;
+    height: auto;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 20px;
+    border-bottom: 2px solid #fff;
+}
+.About_first_para_1{
     display: flex;
-    flex-wrap: wrap;
-    padding: 50px 0px 30px 0px;
-  }
-  
-  .food-menu-container img {
-    display: block;
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: center;
-  }
-  
-  .food-menu-item {
+}
+.uff{
     display: flex;
-    flex: 28 1 1204px;
-    justify-content: space-evenly;
-    margin-bottom: 3rem;
-    border: 2px solid #fff;
-    background: #fff;
-    border-radius: 10px;
-  }
- .line {
-    border: 2px #fff dotted;
-  }
-  
-  .food-description {
-    margin: auto 1.5rem;
-  }
-  
-  .font-title {
-    font-size: 1.8rem;
-    font-weight: 400;
-    color: #444;
-  }
-  
-  .food-description p {
-    font-size: 1.4rem;
-    color: #000;
-    font-weight: 500;
-  }
-  
-  .food-description .food-price {
-    color: #000;
-    font-weight: 700;
-  }
-  
+}
+.About_head_2{
+    padding:20px 120px;
+}
+.About_head_3{
+    padding: 20px;
+}
+.About_head_4 {
+    padding: 0px 348px;
+}
+.About_first_para_3{
+    display: flex;
+}
+.About_head_5{
+    padding:20px 100px;
+}
+.About_head_6{
+    padding: 20px 11px;
+}
+.About_first_para_4{
+    display: flex;
+}
+.About_head_7{
+    padding:20px 90px;
+}
+.About_head_8{
+    padding: 20px 11px;
+}
+.About_first_para_5{
+    display: flex;
+}
+.About_head_9{
+    padding:20px 54px;
+}
+.About_head_10{
+    padding: 20px 11px;
+}
+.About_first_para_6{
+    display: flex;
+}
+.About_head_11{
+    padding:20px 54px;
+}
+.About_head_12{
+    padding: 20px 11px;
+}
